# rocket_web3_server

./: .dockerignore  .env  .gitignore  Cargo.toml  README.md  Rocket.toml  docker-compose.build.yml  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.traefik.yml  docker-compose.yml  request.http  request.vault.http
contract/: abi.json  bytecode.json  hardhat.config.ts  package-lock.json  package.json
contract/contracts/: ProofOfExistence.sol
contract/scripts/: abi.ts  deploy.ts
docker/: Dockerfile
docker/mongo/: init.sh
docker/traefik/: traefik.yml
examples/seed/: config.rs  database.rs  main.rs  model.rs
examples/seed/config/: config_dev.rs  config_prod.rs
examples/seed/dto/: request_dto.rs  response_dto.rs
examples/seed/model/: contract_model.rs  (+1 more)
geth/: .env  docker-compose.yml
geth/docker/: Dockerfile  genesis.json  init.sh
src/: config.rs  contract_interface.rs  controller.rs  database.rs  dto.rs  main.rs  middleware.rs  schedule.rs  service.rs  util.rs
src/config/: config_dev.rs  config_local.rs  config_prod.rs
src/contract_interface/: proof_of_existence_interface.rs
src/controller/: admin_controller.rs  contract_controller.rs  user_controller.rs
src/dto/: raw_transaction.rs  request_dto.rs  response_dto.rs  role.rs
src/middleware/: admin_auth_guard.rs  auth_guard.rs  cors.rs  user_auth_guard.rs
src/model/: user_model.rs
src/schedule/: scraper_schedule.rs
src/service/: contract_service.rs  user_service.rs
src/test/: api_test.rs
src/util/: auth.rs  error_handle.rs  eth_node.rs  open_ssl.rs  vault.rs
(+1 files in other folders)
